A4 modal design fix + scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
 @import 'tailwindcss';
-
+@import './scrollbars.css';
 :root {
   --background: #ffffff;
   --foreground: #171717;
+}
+body {
+  overflow: hidden;
 }
 
 @theme inline {
@@ -91,6 +94,7 @@
     font-size: 7.478rem; /* 119.65px */
     line-height: 1;
   }
+
   .drop-shadow-sharp-card {
     filter: drop-shadow(4px 8px 4px rgba(0, 0, 0, 0.25));
   }
